[package]
name = "anchor-litesvm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Anchor testing utilities for LiteSVM - simplifying Anchor program testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/anchor-litesvm"
keywords = ["solana", "anchor", "litesvm", "testing", "blockchain"]
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]

[dependencies]
litesvm = "0.6.1"
anchor-lang = "0.31.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
borsh = "1.5.3"
sha2 = "0.10.8"
thiserror = "1.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"

[dev-dependencies]
# For testing the library itself